--- a/SharedModels/SharedCode.csproj
+++ b/SharedModels/SharedCode.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net4.8</TargetFramework>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
